# stripe-photo-gateway

./: .dockerignore  .env-example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: app_entrypoint.sh  celery_entrypoint.sh
src/: app.py  models.py
src/api/: dependencies.py  orders.py
src/core/: database.py  redis.py  settings.py
src/integrations/: aws_integration.py  google_integration.py  stripe_integration.py
src/integrations/email/: email_integration.py
src/integrations/email/templates/: new_order_notification.html
src/pages/static/: styles.css
src/pages/static/js/: addressForm.js  customerForm.js  upload.js  uploadPhotos.js
src/pages/templates/: error.html  order_details.html  payment_error.html  payment_success.html  upload_photos.html
src/schemas/: integrations.py  orders.py
src/worker/: tasks.py  worker_app.py
tests/: conftest.py
tests/api/: test_address_validation.py  test_upload_photos.py
tests/integrations/: test_aws_integration.py  test_email_integration.py
tests/pages/: test_template_responses.py
tests/tasks/: conftest.py  test_tasks_functions.py
tests/utils/: mocked_google_responses.py
utils/: init_db.py
