[project]
name = "stripe-photo-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.7",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.coverage.run]
concurrency = ["gevent"]
omit = ["*/utils/*", "__init__.py"]

[tool.ruff]
line-length = 88
extend-exclude = ["migrations", "tests/utils/mocked_data.py"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
run = "fastapi dev src/app.py"
superuser = "python src/utils/create_supersuer.py"
pre_test = "task lint"
test = "pytest --cov=src -vv"
post_test = "coverage html"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."

